--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+   <header> 
+       <div class="myname">Arison Arias</div>
+        <nav>
+        <section class="navbar">
+            <a href="#" class="home" target="_blank"> Home</a>
+            <a href="about.html" target="_blank"> About</a>
+            <a href="contact.html" target="_blank"> Contact</a>
+            <a href="projects.html" target="_blank"> Projects</a>
+        </section>
+    </nav> 
+   </header>
+<div class="main">
+    <div class="image"> 
+        <img src="https://picsum.photos/150" alt="random pic">
+       <p> Arison Arias</p>
+       <button class="project">My Projects</button>
+    </div>
     
+
+</div>
+
+
+
+
+
 </body>
 </html>
