--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -16,32 +16,20 @@
             <a href="projects.html"class="navbar"target="_blank"> Projects</a>
     </nav> 
    </header>
-    <div class="image"> 
-        <img src="https://picsum.photos/300" width=300 height=300 alt="random pic"> 
-    </div>
-
-       <div class="name"> 
-           <div>Arison Arias</div> 
-        </div>
-       
-        <div class="button">
-        <button class="project">My Projects</button>
-    </div>
-
-       <div class="text"> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+   <div class="container">
+    <div class="image"> <img src="https://picsum.photos/300"> </div>
+    <div class="name"> 
+        <h1>Arison Arias</h1>
+        <a href="projects.html"class="projectButton" target="_blank">My Projects</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-            optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-            obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-            nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-            tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-            quia.</p>
-        </div>
-    
+            optio, eaque rerum! Provident similique accusantium nemo autem.</p>
+    </div>
+  </div>    
 <section>   
     <div class="main-pics">
-       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200"this>
        <img src="https://picsum.photos/200">
        <img src="https://picsum.photos/200">
        <img src="https://picsum.photos/200">
@@ -54,9 +42,8 @@
 </section>
 
     <footer>
-
+        <div>Like what you see?</div>
         <nav class="bottom"> 
-            Like what you see
             <a href="contact.html"target="_blank"> Contact Me</a>
         </nav>
 
