--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    </header>
    <div class="container">
     <div class="image"> <img src="https://picsum.photos/300"> </div>
-    <div class="name"> 
+    <div class="item"> 
         <h1>Arison Arias</h1>
         <a href="projects.html"class="projectButton" target="_blank">My Projects</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
@@ -29,29 +29,55 @@
   </div>    
 <section>   
     <div class="main-pics">
-       <img src="https://picsum.photos/200"this>
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
-       <img src="https://picsum.photos/200">
+       <div class="firs-project">
+           <p>Title of a</p>
+            <img src="https://picsum.photos/200">
+        </div>
+        <div class="scnd-project">
+            <p>project</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="thir-project">
+            <p>might go</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="four-project">
+            <p>right here</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="five-project">
+            <p>cool thing</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="six-project">
+            <p>fun thing</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="sev-project">
+            <p>spicy thing</p>
+             <img src="https://picsum.photos/200">
+         </div>
+         <div class="eight-project">
+            <p>special thing</p>
+             <img src="https://picsum.photos/200">
+         </div>
     </div>
-
+<!-- <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200">
+       <img src="https://picsum.photos/200"> -->
 </section>
 
     <footer>
         <div>Like what you see?</div>
         <nav class="bottom"> 
-            <a href="contact.html"target="_blank"> Contact Me</a>
+            <button>Contact me!</button>
         </nav>
 
     </footer>
-
-
-
-
 
 
 
